--- a/src/sass/partials/_badge.scss
+++ b/src/sass/partials/_badge.scss
@@ -48,26 +48,26 @@
  * Status Badges
  ***************************************************/
 
-.advisory-status {
-  position: absolute;
-  margin-top: 3px;
-  margin-left: 1em;
-  text-transform: uppercase;
-  font-size: 0.6em;
-  padding: 2px 10px;
-  border-radius: 5px;
-  letter-spacing: 0.08em;
+// .advisory-status {
+//   position: absolute;
+//   margin-top: 3px;
+//   margin-left: 1em;
+//   text-transform: uppercase;
+//   font-size: 0.6em;
+//   padding: 2px 10px;
+//   border-radius: 5px;
+//   letter-spacing: 0.08em;
 
-  @include responsive(767px) {
-    right: 10px;
-    top: 0;
-  }
-}
-.advisory-status.ongoing {
-  background-color: red;
-  color: #fff;
-}
+//   @include responsive(767px) {
+//     right: 0;
+//     top: 0;
+//   }
+// }
+// .advisory-status.ongoing {
+//   background-color: red;
+//   color: #fff;
+// }
 
-.advisory-status.upcoming {
-  background-color: orange;
-}
+// .advisory-status.upcoming {
+//   background-color: orange;
+// }
